RESOLVED FIXED37963
Regression: framebufferRenderbuffer crashes with null renderBuffer
https://bugs.webkit.org/show_bug.cgi?id=37963
Summary Regression: framebufferRenderbuffer crashes with null renderBuffer
Kenneth Russell
Reported 2010-04-21 17:24:29 PDT
https://bugs.webkit.org/show_bug.cgi?id=35611 introduced a regression in framebufferRenderbuffer when a null renderBuffer is passed; the null pointer is dereferenced and the WebGLRenderingContext crashes.
Attachments
patch (4.78 KB, patch)
2010-04-21 17:50 PDT, Zhenyao Mo
no flags
Zhenyao Mo
Comment 1 2010-04-21 17:50:58 PDT
Kenneth Russell
Comment 2 2010-04-21 17:55:15 PDT
Comment on attachment 54009 [details] patch Looks good. Thanks for the quick fix.
Dimitri Glazkov (Google)
Comment 3 2010-04-22 09:25:07 PDT
Comment on attachment 54009 [details] patch r=me.
WebKit Commit Bot
Comment 4 2010-04-22 10:04:15 PDT
Comment on attachment 54009 [details] patch Clearing flags on attachment: 54009 Committed r58103: <http://trac.webkit.org/changeset/58103>
WebKit Commit Bot
Comment 5 2010-04-22 10:04:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.