2010-04-22  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        Regression: framebufferRenderbuffer crashes with null renderBuffer
        https://bugs.webkit.org/show_bug.cgi?id=37963

        * fast/canvas/webgl/framebuffer-object-attachment-expected.txt: Adding test cases for null renderbuffer input.
        * fast/canvas/webgl/framebuffer-object-attachment.html: Ditto.
2010-04-22  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        Regression: framebufferRenderbuffer crashes with null renderBuffer
        https://bugs.webkit.org/show_bug.cgi?id=37963

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::framebufferRenderbuffer): Dealing with null renderbuffer input.

Canonical link: https://commits.webkit.org/49384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58103 268f45cc-cd09-0410-ab3c-d52691b4dbfc