WebCore/html/canvas/WebGLRenderingContext.cpp
@@ -813,7 +813,7 @@ void WebGLRenderingContext::framebufferRenderbuffer(unsigned long target, unsign
         m_context->synthesizeGLError(GraphicsContext3D::INVALID_OPERATION);
         return;
     }
-    if (buffer->object()) {
+    if (buffer && buffer->object()) {
         bool isConflicted = false;
         bool isDepthOrStencil = true;
         switch (attachment) {
